apache/apache-php5.3/kubernetes/network-policy/example-cilium-default-deny-all-ingress.yml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "deny-all-ingress"
  namespace: default
spec:
  endpointSelector:
    matchLabels:
      role: restricted
  ingress:
  - {}
